--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,11 @@ wheels/
 .installed.cfg
 *.egg
 
+docs/_build/
+pip.egg-info/
+MANIFEST
+*~
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
