--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+numpy
+h5py
 requests  # For interacting over HTTP
 requests_toolbelt  # For dumping information about requests/responses
 ads  # For searching ADS via the API
@@ -6,3 +8,4 @@ lxml  # For parsing doxygen
 feedparser  # For parsing arxiv responses
 tqdm  # For nice progress bars
 pytz  # For timezone information
+romspline  # For LVC format
