--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 numpy = "*"
+scipy = "*"
 h5py = "*"
 requests = "*"
 requests-toolbelt = "*"
@@ -16,7 +17,6 @@ lxml = "*"
 feedparser = "*"
 tqdm = "*"
 pytz = "*"
-romspline = "*"
 
 [requires]
 python_version = ">=3.3"
