--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 numpy
+scipy
 h5py
 requests  # For interacting over HTTP
 requests_toolbelt  # For dumping information about requests/responses
@@ -8,4 +9,3 @@ lxml  # For parsing doxygen
 feedparser  # For parsing arxiv responses
 tqdm  # For nice progress bars
 pytz  # For timezone information
-romspline  # For LVC format
