--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name =
 black = {version = ">=20.8b1", optional = true, markers = "implementation_name == 'cpython'"}
 mktheapidocs = {version = ">=0.2", optional = true, markers = "implementation_name == 'cpython'"}
 pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
-quaternionic = "^1.0"
+quaternionic = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
