--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,9 +34,9 @@ target-version = ['py36']
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-norecursedirs = ".* build dist *.egg-info install ENV"
+norecursedirs = ".* build dist *.egg-info install notes ENV"
 junit_family="xunit2"
-addopts = "-v --tb=short --doctest-glob='' --cov --cov-branch --cov-report xml"
+addopts = "-v --tb=short --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a9"]
