--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pymdown-extensions = {version = "^8", optional = true, markers = "implementation
 quaternionic = "*"
 h5py = "^2.10.0"
 inflection = "^0.5.1"
+requests = "^2.24.0"
+requests_toolbelt = "^0.9.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
