--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "sxs"
-version = "0.0.0"
+version = "0.0.0a0"
 description = "Interpret numpy arrays as sxs arrays with numba acceleration"
 readme = "README.md"
 license = "MIT"
@@ -22,6 +22,7 @@ h5py = "^2.10.0"
 inflection = "^0.5.1"
 requests = "^2.24.0"
 requests_toolbelt = "^0.9.1"
+pytest-forked = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
