--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ quaternionic = "*"
 h5py = "^2.10.0"
 inflection = "^0.5.1"
 requests = "^2.24.0"
-requests_toolbelt = "^0.9.1"
 pytest-forked = "^1.3.0"
+tqdm = "^4.48.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
