--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ inflection = "^0.5.1"
 requests = "^2.24.0"
 pytest-forked = "^1.3.0"
 tqdm = "^4.48.2"
+pytz = "^2020.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
