--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8] #, pypy3]
+        os: [ubuntu-latest]
+        python-version: [3.6]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+        # python-version: [3.6, 3.7, 3.8] #, pypy3]
+
         # exclude:
         #   - os: windows-latest
         #     python-version: pypy3
