--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ requests = "^2.24.0"
 pytest-forked = "^1.3.0"
 tqdm = "^4.48.2"
 pytz = "^2020.1"
+urllib3 = "^1.25.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
