--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       matrix:
         # os: [ubuntu-latest]
         # python-version: [3.6]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: [3.6, 3.7, 3.8] #, pypy3]
         # exclude:
         #   - os: windows-latest
@@ -43,11 +43,15 @@ jobs:
           #python -m pip install poetry  # Only install poetry like this in containers
           python -m pip install --no-warn-script-location --user --pre poetry -U  # Temporary: https://github.com/python-poetry/poetry/issues/2711
 
-      - name: Run poetry
+      - name: Build and install with poetry
         run: |
           rm poetry.lock
           python -m poetry build
           python -m poetry install
+
+      - name: Run tests
+        if: "matrix.os != 'windows-latest'"
+        run: |
           python -m poetry run pytest -s --cov --cov-branch --cov-report=xml
 
       - name: Upload coverage
