--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 license = "MIT"
 authors = ["Michael Boyle <michael.oliver.boyle@gmail.com>"]
 homepage = "https://github.com/sxs-collaboration/sxs"
+include = ["tests"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
@@ -43,7 +44,7 @@ target-version = ['py36']
 minversion = "6.0"
 norecursedirs = ".* build dist *.egg-info install notes ENV"
 junit_family="xunit2"
-addopts = "-v --tb=short --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"
+addopts = "-s -v --tb=short --doctest-glob='' --cov=sxs --cov-branch --cov-report xml"
 
 [build-system]
 requires = ["poetry-core>=1.0.0a9"]
