--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest-forked = "^1.3.0"
 tqdm = "^4.48.2"
 pytz = "^2020.1"
 urllib3 = "^1.25.10"
+spherical = "^0.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
