Update quaternionic dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name =
 black = {version = ">=20.8b1", optional = true, markers = "implementation_name == 'cpython'"}
 mktheapidocs = {version = ">=0.2", optional = true, markers = "implementation_name == 'cpython'"}
 pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
-quaternionic = "*"
+quaternionic = ">=0.1.16"
 h5py = "^2.10.0"
 inflection = "^0.5.1"
 requests = "^2.24.0"
