--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ homepage = "https://github.com/sxs-collaboration/sxs"
 include = ["tests"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.6.1"
 importlib-metadata = {version = "^1.0", python = "<3.8"}
 numpy = "^1.15"
 scipy = "^1.0"
@@ -27,6 +27,7 @@ tqdm = "^4.48.2"
 pytz = "^2020.1"
 urllib3 = "^1.25.10"
 spherical = "^0.0.1"
+pandas = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
