--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,21 @@ pytz = "^2020.1"
 urllib3 = "^1.25.10"
 spherical = "^0.0.1"
 pandas = "^1.1.2"
+ipywidgets = {version = "^7.5.1", optional = true}
+ipykernel = {version = "^5.3.4", optional = true}
+jupyter_contrib_nbextensions = {version = "^0.5.1", optional = true}
+jupyterlab = {version = "^2.2.8", optional = true}
+line_profiler = {version = "^3.0.2", optional = true}
+memory_profiler = {version = "^0.57.0", optional = true}
+matplotlib = {version = ">=2.1.1", optional = true}
+sympy = {version = "^1.6.2", optional = true}
+corner = {version = "^2.1.0", optional = true}
+qgrid = {version = "^1.3.1", optional = true}
+rise = {version = "^5.6.1", optional = true}
+quaternion = {version = "^0.3.1", optional = true}
+spinsfast = {version = "^104.2020.8", optional = true}
+spherical_functions = {version = "^2020.8.18", optional = true}
+scri = {version = "^2020.8.18", optional = true}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0"
@@ -37,6 +52,7 @@ pytest-cov = ">=2.10.1"
 mkdocs = ["mkdocs"]
 mkapi = ["mkapi"]
 pymdown-extensions = ["pymdown-extensions"]
+ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyterlab", "line_profiler", "memory_profiler", "matplotlib", "sympy", "corner", "qgrid", "rise", "quaternion", "spinsfast", "spherical_functions", "scri"]
 
 [tool.black]
 line-length = 120
