--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ black = {version = ">=20.8b1", optional = true, markers = "implementation_name =
 pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
 mkapi = {version = "^1.0.13", optional = true, python = ">=3.7"}
 quaternionic = ">=0.1.16"
+spherical = ">=0.1.2"
 h5py = "^2.10.0"
 inflection = "^0.5.1"
 requests = "^2.24.0"
@@ -26,7 +27,6 @@ pytest-forked = "^1.3.0"
 tqdm = "^4.48.2"
 pytz = "^2020.1"
 urllib3 = "^1.25.10"
-spherical = "^0.1"
 pandas = "^1.1.2"
 ipywidgets = {version = "^7.5.1", optional = true}
 ipykernel = {version = "^5.3.4", optional = true}
