--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest] #, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8] #, pypy3]
         # exclude:
         #   - os: windows-latest
@@ -41,7 +41,6 @@ jobs:
           python -m poetry install
 
       - name: Run tests
-        if: "matrix.os != 'windows-latest'"
         run: |
           python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml
 
