--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,3 +124,28 @@ jobs:
           python -m poetry build
           python -m poetry install --no-dev
           python -m poetry publish
+
+
+  binder:
+    name: Trigger a binder rebuild
+    needs: release
+    runs-on: ubuntu-latest
+    if: >-
+        github.ref == 'refs/heads/main'
+        && !contains(github.event.head_commit.message, '[no release]')
+        && (success() || contains(github.event.head_commit.message, '[skip tests]'))
+
+    steps:
+      - name: Trigger other repository
+        # I created a new personal access token via github profile > settings > developer settings >
+        # personal access tokens.  I clicked the "repo" checkbox, created the token, and copied it.
+        # Then, I went to this repo's settings > secrets, and created a new secret named
+        # "MOBLE_TOKEN" with a value of "moble:<token>", where <token> is the copied token.  This
+        # command sends a POST to the other repo, which is set up to build on `workflow_dispatch`.
+        run: |
+          curl \
+          -X POST \
+          -H "Accept: application/vnd.github.v3+json" \
+          -u ${{ secrets.MOBLE_TOKEN }} \
+          https://api.github.com/repos/moble/sxs_notebooks/actions/workflows/binder.yml/dispatches \
+          -d '{"ref":"${{ github.event.ref }}"}'
