--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,8 +31,7 @@ jobs:
       - name: Install poetry
         run: |
           python -m pip install --upgrade pip
-          #python -m pip install poetry  # Only install poetry like this in containers
-          python -m pip install --no-warn-script-location --user --pre poetry -U  # Temporary: https://github.com/python-poetry/poetry/issues/2711
+          python -m pip install poetry  # Only install poetry like this in containers
 
       - name: Build and install with poetry
         run: |
