--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ qgrid = {version = "^1.3.1", optional = true}
 rise = {version = "^5.6.1", optional = true}
 quaternion = {version = "^0.3.1", optional = true}
 spinsfast = {version = "^104.2020.8", optional = true}
-spherical_functions = {version = "^2020.8.18", optional = true}
+spherical-functions = {version = ">=2020.8.18", optional = true}
 scri = {version = "^2020.8.18", optional = true}
 pylatexenc = "^2.7"
 feedparser = "^6.0.1"
@@ -54,7 +54,7 @@ pytest-cov = ">=2.10.1"
 mkdocs = ["mkdocs"]
 mkapi = ["mkapi"]
 pymdown-extensions = ["pymdown-extensions"]
-ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyterlab", "line_profiler", "memory_profiler", "matplotlib", "sympy", "corner", "qgrid", "rise", "quaternion", "spinsfast", "spherical_functions", "scri"]
+ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyterlab", "line_profiler", "memory_profiler", "matplotlib", "sympy", "corner", "qgrid", "rise", "quaternion", "spinsfast", "spherical-functions", "scri"]
 
 [tool.black]
 line-length = 120
