--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,9 @@ jobs:
     name: ${{ matrix.os }} python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     if: >-
-        !contains(github.event.head_commit.message, '[skip ci]')
-        && !contains(github.event.head_commit.message, '[skip tests]')
+        ( !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip tests]') )
+        || ( github.ref == 'refs/heads/main' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' )
+
     strategy:
       # fail-fast: false
       matrix:
@@ -88,7 +89,7 @@ jobs:
           python -m poetry version "${version_bump_rule}"
           export new_version=$(python .github/scripts/parse_version.py pyproject.toml)
           echo "new_version: '${new_version}'"
-          echo "::set-env name=new_version::${new_version}"  # Save env variable for later steps
+          echo "new_version=${new_version}" >> $GITHUB_ENV  # Save env variable for later steps
 
       - name: Tag and push new version
         shell: bash
