--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ jobs:
     name: ${{ matrix.os }} python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     if: >-
-        ( !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.head_commit.message, '[skip tests]') )
-        || ( github.ref == 'refs/heads/main' && ${{ matrix.os }} == 'ubuntu-latest' && ${{ matrix.python-version }} == '3.8' )
+        !contains(github.event.head_commit.message, '[skip ci]')
+        && !contains(github.event.head_commit.message, '[skip tests]')
 
     strategy:
       # fail-fast: false
@@ -21,31 +21,42 @@ jobs:
         #     python-version: pypy3
 
     steps:
+      - name: Simplify main branch
+        env:
+          SIMPLIFY: ${{ github.ref }} == 'refs/heads/main' && ${{ matrix.os }} == 'ubuntu-latest' && ${{ matrix.python-version }} == '3.8'
+        run: |
+          echo "SIMPLIFY=${SIMPLIFY}"
+          echo "skip_build_and_test_replicates=${SIMPLIFY}" >> $GITHUB_ENV
+      
       - name: Check out code
         uses: actions/checkout@v2
 
       - name: Set up python ${{ matrix.python-version }}
+        if: ${{ env.skip_build_and_test_replicates }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install poetry
+        if: ${{ env.skip_build_and_test_replicates }}
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry  # Only install poetry like this in containers
 
       - name: Build and install with poetry
+        if: ${{ env.skip_build_and_test_replicates }}
         run: |
           rm poetry.lock
           python -m poetry build
           python -m poetry install
 
       - name: Run tests
+        if: ${{ env.skip_build_and_test_replicates }}
         run: |
           python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml
 
       - name: Upload coverage
-        if: "matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'"
+        if: "matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest' && env.skip_build_and_test_replicates"
         shell: bash
         run: |
           bash <(curl -s https://codecov.io/bash)
