--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,6 @@ importlib-metadata = {version = "^1.0", python = "<3.8"}
 numpy = "^1.15"
 scipy = "^1.0"
 numba = {version = ">=0.50", markers = "implementation_name == 'cpython'"}
-mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name == 'cpython'"}
-black = {version = ">=20.8b1", optional = true, markers = "implementation_name == 'cpython'"}
-pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
 mkapi = {version = "^1.0.13", optional = true, python = ">=3.7"}
 quaternionic = ">=0.1.16"
 spherical = ">=0.1.2"
@@ -28,6 +25,10 @@ tqdm = "^4.48.2"
 pytz = "^2020.1"
 urllib3 = "^1.25.10"
 pandas = "^1.1.2"
+mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name == 'cpython'"}
+black = {version = ">=20.8b1", optional = true, markers = "implementation_name == 'cpython'"}
+pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
+spinsfast = {version = "^104", markers = "sys_platform != 'win32' and sys_platform != 'cygwin'"}
 ipywidgets = {version = "^7.5.1", optional = true}
 ipykernel = {version = "^5.3.4", optional = true}
 jupyter_contrib_nbextensions = {version = "^0.5.1", optional = true}
@@ -40,7 +41,6 @@ corner = {version = "^2.1.0", optional = true}
 qgrid = {version = "^1.3.1", optional = true}
 rise = {version = "^5.6.1", optional = true}
 quaternion = {version = "^0.3.1", optional = true}
-spinsfast = {version = "^104.2020.8", optional = true}
 spherical-functions = {version = ">=2020.8.18", optional = true}
 scri = {version = "^2020.8.18", optional = true}
 pylatexenc = "^2.7"
@@ -54,7 +54,7 @@ pytest-cov = ">=2.10.1"
 mkdocs = ["mkdocs"]
 mkapi = ["mkapi"]
 pymdown-extensions = ["pymdown-extensions"]
-ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyterlab", "line_profiler", "memory_profiler", "matplotlib", "sympy", "corner", "qgrid", "rise", "quaternion", "spinsfast", "spherical-functions", "scri"]
+ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyterlab", "line_profiler", "memory_profiler", "matplotlib", "sympy", "corner", "qgrid", "rise", "quaternion", "spherical-functions", "scri"]
 
 [tool.black]
 line-length = 120
