--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ scipy = "^1.0"
 numba = {version = ">=0.50", markers = "implementation_name == 'cpython'"}
 mkapi = {version = "^1.0.13", optional = true, python = ">=3.7"}
 quaternionic = ">=0.1.16"
-spherical = ">=0.1.2"
+spherical = "^0.1"
 h5py = "^2.10.0"
 inflection = "^0.5.1"
 requests = "^2.24.0"
