--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,11 +21,12 @@ jobs:
         #     python-version: pypy3
 
     steps:
-      - name: Simplify main branch
+      - name: Skip replicates on main branch
         env:
-          SIMPLIFY: ${{ github.ref != 'refs/heads/main' || ( matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' ) }}
+          skip_replicates: ${{ github.ref == 'refs/heads/main' && (matrix.os != 'ubuntu-latest' || matrix.python-version != '3.8') }}
         run: |
-          echo "skip_build_and_test_replicates=${SIMPLIFY}" >> $GITHUB_ENV
+          # echo "skip_build_and_test_replicates=${skip_replicates}" >> $GITHUB_ENV
+          echo "skip_build_and_test_replicates='false'" >> $GITHUB_ENV
 
       - name: Check out code
         if: ${{ env.skip_build_and_test_replicates == 'true' }}
@@ -56,7 +57,7 @@ jobs:
           python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml
 
       - name: Upload coverage
-        if: "matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest' && env.skip_build_and_test_replicates"
+        if: "matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'"
         shell: bash
         run: |
           bash <(curl -s https://codecov.io/bash)
@@ -84,8 +85,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install toml
-          #python -m pip install poetry  # Only install poetry like this in containers
-          python -m pip install --no-warn-script-location --user --pre poetry -U  # Temporary: https://github.com/python-poetry/poetry/issues/2711
+          python -m pip install poetry  # Only install poetry like this in containers
           python -m poetry update
           python -m poetry build
           python -m poetry install --no-dev
