--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,34 +25,34 @@ jobs:
         env:
           skip_replicates: ${{ github.ref == 'refs/heads/main' && (matrix.os != 'ubuntu-latest' || matrix.python-version != '3.8') }}
         run: |
-          # echo "skip_build_and_test_replicates=${skip_replicates}" >> $GITHUB_ENV
-          echo "skip_build_and_test_replicates='false'" >> $GITHUB_ENV
+          # echo "skipping_build_and_test_replicate=${skip_replicates}" >> $GITHUB_ENV
+          echo "skipping_build_and_test_replicate='false'" >> $GITHUB_ENV
 
       - name: Check out code
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/checkout@v2
 
       - name: Set up python ${{ matrix.python-version }}
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install poetry
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry  # Only install poetry like this in containers
 
       - name: Build and install with poetry
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
           rm poetry.lock
           python -m poetry build
           python -m poetry install
 
       - name: Run tests
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
           python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml
 
