--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Run tests
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
-          python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml
+          python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
 
       - name: Upload coverage
         if: "matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'"
