--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,42 +21,43 @@ jobs:
         #     python-version: pypy3
 
     steps:
-      - name: Simplify main branch
+      - name: Skip replicates on main branch
         env:
-          SIMPLIFY: ${{ github.ref != 'refs/heads/main' || ( matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' ) }}
+          skip_replicates: ${{ github.ref == 'refs/heads/main' && (matrix.os != 'ubuntu-latest' || matrix.python-version != '3.8') }}
         run: |
-          echo "skip_build_and_test_replicates=${SIMPLIFY}" >> $GITHUB_ENV
+          # echo "skipping_build_and_test_replicate=${skip_replicates}" >> $GITHUB_ENV
+          echo "skipping_build_and_test_replicate='false'" >> $GITHUB_ENV
 
       - name: Check out code
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/checkout@v2
 
       - name: Set up python ${{ matrix.python-version }}
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install poetry
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
           python -m pip install --upgrade pip
           python -m pip install poetry  # Only install poetry like this in containers
 
       - name: Build and install with poetry
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
           rm poetry.lock
           python -m poetry build
           python -m poetry install
 
       - name: Run tests
-        if: ${{ env.skip_build_and_test_replicates == 'true' }}
+        if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
-          python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml
+          python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
 
       - name: Upload coverage
-        if: "matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest' && env.skip_build_and_test_replicates"
+        if: "matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'"
         shell: bash
         run: |
           bash <(curl -s https://codecov.io/bash)
@@ -84,8 +85,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install toml
-          #python -m pip install poetry  # Only install poetry like this in containers
-          python -m pip install --no-warn-script-location --user --pre poetry -U  # Temporary: https://github.com/python-poetry/poetry/issues/2711
+          python -m pip install poetry  # Only install poetry like this in containers
           python -m poetry update
           python -m poetry build
           python -m poetry install --no-dev
