--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,9 @@ importlib-metadata = {version = "^1.0", python = "<3.8"}
 numpy = "^1.15"
 scipy = "^1.0"
 numba = {version = ">=0.50", markers = "implementation_name == 'cpython'"}
-mkapi = {version = "^1.0.13", optional = true, python = ">=3.7"}
+mkapi = {version = "1.0.13", optional = true, python = ">=3.7"}
 quaternionic = ">=0.1.16"
-spherical = "^0.1"
+spherical = "^1"
 h5py = "^2.10.0"
 inflection = "^0.5.1"
 requests = "^2.24.0"
@@ -28,7 +28,7 @@ pandas = "^1.1.2"
 mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name == 'cpython'"}
 black = {version = ">=20.8b1", optional = true, markers = "implementation_name == 'cpython'"}
 pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
-spinsfast = {version = "^104", markers = "sys_platform == 'linux'"}
+spinsfast = {version = "^104", optional = true, markers = "sys_platform != 'win32'"}
 ipywidgets = {version = "^7.5.1", optional = true}
 ipykernel = {version = "^5.3.4", optional = true}
 jupyter_contrib_nbextensions = {version = "^0.5.1", optional = true}
@@ -41,8 +41,7 @@ corner = {version = "^2.1.0", optional = true}
 qgrid = {version = "^1.3.1", optional = true}
 rise = {version = "^5.6.1", optional = true}
 quaternion = {version = "^0.3.1", optional = true}
-spherical-functions = {version = ">=2020.8.18", optional = true}
-scri = {version = "^2020.8.18", optional = true}
+scri = {version = "^2020.8.18", optional = true, markers = "sys_platform != 'win32'"}
 pylatexenc = "^2.7"
 feedparser = "^6.0.1"
 
@@ -54,7 +53,7 @@ pytest-cov = ">=2.10.1"
 mkdocs = ["mkdocs"]
 mkapi = ["mkapi"]
 pymdown-extensions = ["pymdown-extensions"]
-ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyterlab", "line_profiler", "memory_profiler", "matplotlib", "sympy", "corner", "qgrid", "rise", "quaternion", "spherical-functions", "scri"]
+ecosystem = ["ipywidgets", "ipykernel", "jupyter_contrib_nbextensions", "jupyterlab", "line_profiler", "memory_profiler", "matplotlib", "sympy", "corner", "qgrid", "rise", "quaternion", "scri"]
 
 [tool.black]
 line-length = 120
