--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       # fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8] #, 3.9] #, pypy3]
+        python-version: [3.6, 3.7, 3.8, 3.9] #, pypy3]
         # exclude:
         #   - os: windows-latest
         #     python-version: pypy3
@@ -95,6 +95,12 @@ jobs:
         env:
           github_event_head_commit_message: ${{ github.event.head_commit.message }}
         run: |
+          # Note: The following line reads the HEAD commit message to look for an indication of how
+          # to bump the version number.  Specifically, if `#patch`, `#minor`, or `#major` is present
+          # in the commit message, it bumps the corresponding version number.  Those can also be
+          # prepended as `#premajor`, etc., to add/bump the prerelease modifier.  If none of those
+          # are present, `#patch` is assumed — that is, the lowest-significance number is
+          # incremented.  See the documentation of the `poetry version` command for details.
           export version_bump_rule=$(python .github/scripts/parse_bump_rule.py)
           echo "version_bump_rule: '${version_bump_rule}'"
           python -m poetry version "${version_bump_rule}"
