--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       # fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9] #, pypy3]
+        python-version: [3.7, 3.9] #, pypy3]
         # exclude:
         #   - os: windows-latest
         #     python-version: pypy3
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Skip replicates on main branch
         env:
-          skip_replicates: ${{ github.ref == 'refs/heads/main' && (matrix.os != 'ubuntu-latest' || matrix.python-version != '3.8') }}
+          skip_replicates: ${{ github.ref == 'refs/heads/main' && (matrix.os != 'ubuntu-latest' || matrix.python-version != '3.9') }}
         run: |
           # echo "skipping_build_and_test_replicate=${skip_replicates}" >> $GITHUB_ENV
           echo "skipping_build_and_test_replicate='false'" >> $GITHUB_ENV
@@ -57,7 +57,7 @@ jobs:
           python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
 
       - name: Upload coverage
-        if: "matrix.python-version == 3.8 && matrix.os == 'ubuntu-latest'"
+        if: "matrix.python-version == 3.9 && matrix.os == 'ubuntu-latest'"
         shell: bash
         run: |
           bash <(curl -s https://codecov.io/bash)
@@ -79,7 +79,7 @@ jobs:
       - name: Set up python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.9
 
       - name: Install poetry and this package
         run: |
