--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,13 @@ jobs:
     strategy:
       # fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.9] #, pypy3]
-        # exclude:
-        #   - os: windows-latest
-        #     python-version: pypy3
+        os: [ubuntu-latest]
+        python-version: [3.9]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+        # python-version: [3.7, 3.9]
+
+    env:
+      POETRY_VIRTUALENVS_CREATE: false
 
     steps:
       - name: Skip replicates on main branch
@@ -41,20 +43,21 @@ jobs:
       - name: Install poetry
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry  # Only install poetry like this in containers
+          curl -fsS -o get-poetry.py https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py
+          python get-poetry.py -y
+          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
 
       - name: Build and install with poetry
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
-          rm poetry.lock
-          python -m poetry build
-          python -m poetry install
+          # rm poetry.lock
+          # poetry build
+          poetry install --no-interaction
 
       - name: Run tests
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
-          python -m poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
+          poetry run pytest -s --cov=sxs --cov-branch --cov-report=xml --durations=0
 
       - name: Upload coverage
         if: "matrix.python-version == 3.9 && matrix.os == 'ubuntu-latest'"
