--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,8 @@ jobs:
       - name: Build and install with poetry
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
-          # rm poetry.lock
-          # poetry build
+          rm poetry.lock
+          poetry build
           poetry install --no-interaction
 
       - name: Run tests
