--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,10 @@ jobs:
       - name: Build and install with poetry
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         run: |
+          poetry env info
+          poetry run python -m pip install --upgrade pip
           rm poetry.lock
+          poetry update
           poetry build
           poetry install --no-interaction
 
