--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ homepage = "https://github.com/sxs-collaboration/sxs"
 include = ["tests"]
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = ">=3.6.1,<3.10"
 importlib-metadata = {version = "^1.0", python = "<3.8"}
 numpy = "^1.15"
 scipy = "^1.0"
@@ -26,7 +26,7 @@ pytz = "^2020.1"
 urllib3 = "^1.25.10"
 pandas = "^1.1.2"
 mkdocs = {version = ">=1.1.2", optional = true, markers = "implementation_name == 'cpython'"}
-black = {version = ">=20.8b1", optional = true, markers = "implementation_name == 'cpython'"}
+black = {version = ">=20.8b1", optional = true, markers = "implementation_name == 'cpython'", allow-prereleases = true}
 pymdown-extensions = {version = "^8", optional = true, markers = "implementation_name == 'cpython'"}
 spinsfast = {version = "^104", optional = true, markers = "sys_platform != 'win32'"}
 ipywidgets = {version = "^7.5.1", optional = true}
