--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,14 @@ jobs:
         && !contains(github.event.head_commit.message, '[skip tests]')
 
     strategy:
-      # fail-fast: false
+      fail-fast: false
       matrix:
         os: [ubuntu-latest]
         # os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.9]
 
-    env:
-      POETRY_VIRTUALENVS_CREATE: false
+    # env:
+    #   POETRY_VIRTUALENVS_CREATE: false
 
     steps:
       - name: Skip replicates on main branch
