--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,12 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.9]
-
-    # env:
-    #   POETRY_VIRTUALENVS_CREATE: false
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
       - name: Skip replicates on main branch
@@ -53,8 +49,8 @@ jobs:
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         shell: bash
         run: |
-          poetry env info
           poetry run python -m pip install --upgrade pip
+          poetry env info
           rm poetry.lock
           poetry update
           poetry build
@@ -108,8 +104,8 @@ jobs:
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
         shell: bash
         run: |
-          $HOME/.poetry/bin/poetry env info
           $HOME/.poetry/bin/poetry run python -m pip install --upgrade pip
+          $HOME/.poetry/bin/poetry env info
           rm poetry.lock
           $HOME/.poetry/bin/poetry update
           $HOME/.poetry/bin/poetry build
