--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         && !contains(github.event.head_commit.message, '[skip tests]')
 
     strategy:
-      fail-fast: false
+      # fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
@@ -24,8 +24,8 @@ jobs:
         env:
           skip_replicates: ${{ github.ref == 'refs/heads/main' && (matrix.os != 'ubuntu-latest' || matrix.python-version != '3.9') }}
         run: |
-          # echo "skipping_build_and_test_replicate=${skip_replicates}" >> $GITHUB_ENV
-          echo "skipping_build_and_test_replicate='false'" >> $GITHUB_ENV
+          echo "skipping_build_and_test_replicate=${skip_replicates}" >> $GITHUB_ENV
+          # echo "skipping_build_and_test_replicate='false'" >> $GITHUB_ENV
 
       - name: Check out code
         if: ${{ env.skipping_build_and_test_replicate != 'true' }}
