--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ feedparser = "^6.0.1"
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
 pytest-cov = ">=2.10.1"
+ipython = "^8.4.0"
 
 [tool.poetry.extras]
 mkdocs = ["mkdocs"]
