--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,8 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 mkdocs = ">=1.1.2"
-mkdocstrings = ">=0.22.0"
+mkdocstrings = {extras = ["python"], version = ">=0.22.0"}
+mkdocs-material = ">=9.1.15"
 #pymdown-extensions = "^8"
 
 
