Try a different extra_requirements syntax
Signed-off-by: Michael Boyle <michael.oliver.boyle@gmail.com>

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,5 +17,5 @@ python:
       path: .
       extra_requirements:
         - mkdocs
-        - mkdocstrings[python]
+        - mkdocstrings-python
         - mkdocs-material
