Structure to add download links for ipynb

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
 
 theme:
   name: "material" # "readthedocs", "mkdocs", "material"
+  #custom_dir: "docs/html"
   highlightjs: true
   hljs_languages:
     - python
