--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,17 +41,16 @@ docs = [
   "mkdocs-jupyter"
 ]
 ecosystem = [
-  "ipywidgets >=7.5.1",
-  "ipykernel >=5.3.4",
-  "jupyter_contrib_nbextensions >=0.5.1",
-  "jupyterlab >=2.2.8",
+  "ipywidgets >=8.0",
+  "ipykernel >=6.29",
+  "jupyterlab >=4.2",
   "line_profiler >=3.0.2",
   "memory_profiler >=0.57.0",
   "matplotlib >=2.1.1",
   "numpy >=1.20, <2.0",
   "sympy >=1.6.2",
-  "corner >=2.1.0",
-  "qgrid >=1.3.1",
+  "seaborn >=0.13",
+  "qgridnext >=2.0",
   "rise >=5.6.1",
   "numpy-quaternion >=2023.0.4",
   "spinsfast >=2022; sys_platform != 'win32'",
