Add preprocessor to translation github-flavor admonitions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ plugins:
           options:
             docstring_style: numpy
             show_source: true
+  - admonitions_translation
 
 nav:
   - Home: "index.md"
