Force update of juliacall

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,6 +86,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          hatch run pip install --upgrade juliacall
           hatch run test --durations=0
 
       - name: Upload coverage
