Remove numpy debug stuff

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,11 +85,10 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HATCH_VERBOSE: "2"  # 1 = normal verbose, 2 = very verbose
+          # HATCH_VERBOSE: "2"  # 1 = normal verbose, 2 = very verbose
         run: |
           hatch run pip install pyopenssl>=24.0.0
           hatch run python -c 'import ssl; print("openssl: ", ssl.OPENSSL_VERSION_INFO)'
-          hatch run python -c 'import numpy; print("numpy: ", numpy.__version__)'
           hatch run test -- -k test_waveform_rotations --durations=0 --ignore=tests/test_julia.py
           #hatch run test --durations=0
 
